--- a/styles/components/component15/_resume.scss
+++ b/styles/components/component15/_resume.scss
@@ -113,7 +113,7 @@
                 padding: 2rem 0;
                 border: none;
                 background-color: $blue-dark-v3;
-                width: $fifty-times(2);
+                width: fifty-times(2);
                 max-width: 37rem;
 
                 &::placeholder {
@@ -233,7 +233,7 @@
     border: none;
     padding:.8rem 1.4rem;
     font-size: 2.5rem;
-    color:fifty-times(2%);
+    color:grey;
     position: absolute;
     right: 0;
     top: .45rem;
