add some pallet variables

--- a/styles/_palette.scss
+++ b/styles/_palette.scss
@@ -1,12 +1,26 @@
 $white:#fff;
+$white-v1:#DBE7EF;
+$white-v2:#f6f7f8;
 $grey:#ECF0F1;
 $grey-transp:#ecf0f142;
+$grey-transp-v1:#636372;
 $grey-dark:#A1B1BC;
 $grey-darker:#707070;
 $grey-light:#EAEBEC;
 $light:#F6F6F6;
 $blue-light:#ECF0F1;
+$blue-light-v1:#21C2F8;
+$blue-light-v2:#16B5D8;
 $blue-dark:#2C3E50;
 $blue-dark-v2:#34495E;
 $blue-dark-v3:#222533;
+$blue-dark-v4:#222533ef;
+$blue-dark-v5:#252838;
+$blue-dark-v6:#1A1C27;
+
 $green:#1ABC9C;
+$black-transp:#70707013;
+$orange-light:#EF584D;
+$yellow:#7BC200;
+$brown-light:#686D80;
+$cream:#1BEAC1;
