--- a/styles/components/component14/_share.scss
+++ b/styles/components/component14/_share.scss
@@ -1,6 +1,6 @@
 /*******************************Share*********************************/
 .share {
-    background: #252838;
+    background: $blue-dark-v5;
 
     &__container {
 
