--- a/styles/components/component2/_navigation.scss
+++ b/styles/components/component2/_navigation.scss
@@ -4,7 +4,7 @@
     flex-wrap: wrap;
     margin-top: 2.1rem;
     margin-bottom: 9.6rem;
-    border-bottom: 3px solid #70707013;
+    border-bottom: 3px solid $black-transp;
     padding-bottom: 1.8rem;
 
     .logo {
