--- a/styles/components/component5/_capabilities.scss
+++ b/styles/components/component5/_capabilities.scss
@@ -67,7 +67,7 @@
                     box-shadow:
                     0 0 0 40px hsl(0, 84%, 100%),
                     0 0 0 15px hsl(0, 0%, 90%),
-                    0 0 0 48px #21C2F8;
+                    0 0 0 48px $blue-light-v1;
                 }
             }
 
