--- a/styles/components/component13/_contact.scss
+++ b/styles/components/component13/_contact.scss
@@ -69,7 +69,7 @@
                 width: 100%;
                 padding: 1.40rem 1.9rem;
                 display: inline-block;
-                border: 1px solid #636372;
+                border: 1px solid $grey-transp-v1;
                 background: transparent;
                 font-size: 1.45rem;
             }
@@ -105,7 +105,7 @@
                 }
 
                 &:nth-of-type(2) {
-                    color: #16B5D8;
+                    color: $blue-light-v2;
                 }
             }
 
@@ -122,7 +122,7 @@
                 }
 
                 i {
-                    color: #16B5D8;
+                    color: $blue-light-v2;
                 }
             }
         }
@@ -169,7 +169,7 @@
                 background-color: $white;
 
                 &:nth-of-type(2) {
-                    background-color: #1BEAC1;
+                    background-color: $cream;
                 }
             }
         }
