--- a/styles/components/component4/_about.scss
+++ b/styles/components/component4/_about.scss
@@ -4,7 +4,7 @@
     align-items: flex-end;
     flex-wrap: wrap;
     gap: 3.1rem;
-    background-color: #ecf0f14d;
+    background-color: $grey-transp;
     padding: 8.83rem 0 10.7rem 0;
 
     h2 {
@@ -36,7 +36,7 @@
         font-size: 1.6rem;
         font-weight: 900;
         color: $blue-dark-v2;
-        border: 1px solid #DBE7EF;
+        border: 1px solid $white-v1;
         border-radius: 3px;
         cursor: pointer;
         padding: 1.47rem 4rem 1.3rem 4.01rem;
