--- a/styles/components/component8/_testimonials.scss
+++ b/styles/components/component8/_testimonials.scss
@@ -4,7 +4,7 @@
      flex-direction: column;
      padding-top: 8.5rem;
      padding-bottom: 3.5rem;
-     background-color: #ecf0f178;
+     background-color: $grey-transp;
  
      @include respond-all-devices {
          margin: unset;
