--- a/styles/components/component9/_new_features.scss
+++ b/styles/components/component9/_new_features.scss
@@ -1,7 +1,7 @@
 /*******************************New Features*********************************/
 .new_features {
     padding: 8.89rem 23rem 0rem 23rem;
-    background-color: #222533ef;
+    background-color: $blue-dark-v4;
 
     @include respond-all-devices {
         padding:0!important;
